HSP Docs Library(ドキュメントビューアー)、Artlet2D、d3module,SQLeleを最新版に更新 ドキュメントの更新
Former-commit-id: c2f0f1edee0ebbc1ce93b8b7594ab14ad9bde831

--- a/package/win32/doclib/HSP Docs Library/spn.css
+++ b/package/win32/doclib/HSP Docs Library/spn.css
@@ -79,6 +79,10 @@ pre {
 	border-style: none none none solid;
 	border-color: #337;
 	border-width: 0 0 0 3px;
+
+	/* pre ‚Å©“®Ü‚è•Ô‚µ */
+	word-wrap: break-word;
+	white-space: pre-wrap;
 }
 
 aside {
