--- a/package/win32/hdlmain.css
+++ b/package/win32/hdlmain.css
@@ -1,8 +1,7 @@
-/* hdlcss 1.40 */
-
+/* hdlcss 1.41 */
 body {
 	/* ページ全体のフォント設定 */
-	font: 15px Meiryo;
+	font: 10.9pt Meiryo;
 	line-height: 1.5;
 
 	background: #fff;
@@ -17,12 +16,12 @@ input {
 
 /* nav, tabs */
 nav.top {
-	font-size: 14px;
+	font-size: 10.3pt;
 	line-height: 1.5;
 	margin: 0 22px;
 }
 nav.tabs {
-	font-size: 13px;
+	font-size: 10.1pt;
 	line-height: 1.5;
 	margin: 5px 11px;
 	padding: 0 6px;
@@ -39,7 +38,7 @@ nav.tabs em {
 }
 
 h1 {
-	font-size: 17px;
+	font-size: 12pt;
 	line-height: 1.3;
 	margin: 0;
 	padding: 5px 22px;
@@ -56,7 +55,7 @@ footer {
 	background: #cdd;
 }
 h2 {
-	font-size: 15px;
+	font-size: 11pt;
 	line-height: 1.2;
 	margin: 11px;
 	padding: 2px 11px;
@@ -133,8 +132,6 @@ div.md1 p {
 
 /* paragraph */
 pre, p, .p {
-	font-size: 15px;
-	line-height: 1.5;
 	margin: 11px 22px;
 }
 pre.p {
